# dotfiles-et-al

./: .bashrc  .gitignore  README.md  bootstrap.sh  config.toml  configure.py  edit.py  install-pkg.sh  post-arch.bash  setup.py  summon
bash/: .bash_profile  .bashrc  .profile
bash/.bashrc.d/: 00-env.sh  aliases.sh
emacs/: init.el
nvim/: init.lua
post/: post-KDE.bash  post-arch.bash
tui/: README.md  keybinds.example.toml  pyproject.toml
tui/config_tui/: __init__.py  __main__.py  keymap.py  settings.py  spec.py  store.py  ui.py
yazi/: theme.toml  yazi.toml
