[project]
name = "dotfiles-et-al-tui"
version = "0.1.0"
description = "Two-panel TUI editor for the dotfiles-et-al config.toml"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0",
    "tomlkit>=0.12",
]

[project.scripts]
tui = "config_tui.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config_tui"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
